[package]
name = "comma_serde_urlencoded"
version = "0.8.1" # bump in documentation link and in README on update
authors = ["Eduard Baturin", "Anthony Ramine <n.oxyde@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kinetus/comma_serde_urlencoded"
documentation = "https://docs.rs/comma_serde_urlencoded/0.8.1/comma_serde_urlencoded/"
description = "serde_urlencoded with support for serialization and deserialization of sequences and tuples in comma separated format"
categories = ["encoding", "web-programming"]
keywords = ["serde", "sequence", "urlencoded", "tuple", "comma"]
exclude = ["/.travis.yml", "/bors.toml"]
edition = "2018"

[lib]
test = false

[dependencies]
form_urlencoded = "1"
itoa = "1"
ryu = "1"
serde = "1.0.69"

[dev-dependencies]
serde_derive = "1"
